--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="favourites">Favourites</string>
     <string name="popular">Popular</string>
     <string name="recommended">Recommended</string>
-    <string name="album_art">ALbum art</string>
+    <string name="album_art">Album art</string>
 </resources>
