Implement shared element transition for album art (not perfect yet)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="popular">Popular</string>
     <string name="recommended">Recommended</string>
     <string name="album_art">Album art</string>
+    <string name="album_art_transition" translatable="false">album_art_transition</string>
 </resources>
