Implement layout for SongActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="recommended">Recommended</string>
     <string name="album_art">Album art</string>
     <string name="album_art_transition" translatable="false">album_art_transition</string>
+    <string name="playing_from_playlist">Playing from playlist</string>
+    <string name="rewind">Rewind</string>
+    <string name="forward">Forward</string>
 </resources>
